tests/fixtures/invalid/pow_none_none_set.py
# Cannot call pow() with None, None, Set[int]
x = pow(None, None, {1, 2, 3})
